--- a/practica1/memoria/input/radares.tex
+++ b/practica1/memoria/input/radares.tex
@@ -1,9 +1,9 @@
 \chapter{Simulador de radares}
 
-El simulador de radares simula el funcionamiento de un numero determinado de radares, que poseen una vida util determinada --- por defecto 20 dias --- y un tiempo de reparación determiando hasta que vuelven a estar operativos --- de 15 a 30 dias por defecto ---. Intentaremos averiguar el numero de repuestos necesarios para que el tiempo de desprotección parcial sea inferior al 1\%
+El simulador de radares simula el funcionamiento de un número determinado de radares, que poseen una vida útil determinada --- por defecto 20 días --- y un tiempo de reparación determinado hasta que vuelven a estar operativos --- de 15 a 30 días por defecto ---. Intentaremos averiguar el número de repuestos necesarios para que el tiempo de desprotección parcial sea inferior al 1\%
 
-\section{Variación del numero de ejecuciones}
-En primer lugar, probaremos a ejecutar el simulador bajo su configuración por defecto, variando el número de simulaciones que se realizan. A continación mostramos los resultados obtenidos:
+\section{Variación del número de ejecuciones}
+En primer lugar, probaremos a ejecutar el simulador bajo su configuración por defecto, variando el número de simulaciones que se realizan. A continuación mostramos los resultados obtenidos:
 
 
 % Please add the following required packages to your document preamble:
@@ -14,7 +14,7 @@ En primer lugar, probaremos a ejecutar el simulador bajo su configuración por d
 \begin{tabular}{|c|c|c|c|c|c|c|c|}
 \hline
 \multicolumn{8}{|c|}{\textbf{Tabla generada para el simulador de radares con 1 simulación}} \\ \hline
-\textbf{Num. repuestos} & \textbf{Num. simulaciones} & \textbf{Media fallos} & \textbf{Media t desproteccion} & \textbf{Media \% desproteccion} & \textbf{Desv. num fallos} & \textbf{Desv. t desproteccion} & \textbf{Desv \% desproteccion} \\ \hline
+\textbf{Num. repuestos} & \textbf{Num. simulaciones} & \textbf{Media fallos} & \textbf{Media t desprotección} & \textbf{Media \% desprotección} & \textbf{Desv. num fallos} & \textbf{Desv. t desprotección} & \textbf{Desv \% desprotección} \\ \hline
 0 & 1 & 45 & 349.951 & 95.877 & 0 & 0 & 0 \\
 1 & 1 & 50 & 319.631 & 87.5701 & 0 & 0 & 0 \\
 2 & 1 & 53 & 304.679 & 83.4737 & 0 & 0 & 0 \\
@@ -55,7 +55,7 @@ Con una simulación podemos observar que el número de repuestos necesarios para
 \begin{tabular}{|c|c|c|c|c|c|c|c|}
 \hline
 \multicolumn{8}{|c|}{\textbf{Tabla generada para el simulador de radares con 5 simulaciones}} \\ \hline
-\textbf{Num. repuestos} & \textbf{Num. simulaciones} & \textbf{Media fallos} & \textbf{Media t desproteccion} & \textbf{Media \% desproteccion} & \textbf{Desv. num fallos} & \textbf{Desv. t desproteccion} & \textbf{Desv \% desproteccion} \\ \hline
+\textbf{Num. repuestos} & \textbf{Num. simulaciones} & \textbf{Media fallos} & \textbf{Media t desprotección} & \textbf{Media \% desprotección} & \textbf{Desv. num fallos} & \textbf{Desv. t desprotección} & \textbf{Desv \% desprotección} \\ \hline
 0 & 5 & 42 & 352.239 & 96.5038 & 3.60555 & 9.11129 & 2.4957 \\
 1 & 5 & 50 & 335.562 & 91.9348 & 6.44205 & 13.2647 & 3.63428 \\
 2 & 5 & 53.8 & 287.18 & 78.6795 & 4.65832 & 25.3226 & 6.93761 \\
@@ -88,7 +88,7 @@ Con una simulación podemos observar que el número de repuestos necesarios para
 
 \newpage
 
-Para 5 simulaciones, podemos apreciar como el numero minimo de repuestos necesarios aumenta a 12.
+Para 5 simulaciones, podemos apreciar como el número mínimo de repuestos necesarios aumenta a 12.
 
 % Please add the following required packages to your document preamble:
 % \usepackage{graphicx}
@@ -98,7 +98,7 @@ Para 5 simulaciones, podemos apreciar como el numero minimo de repuestos necesar
 \begin{tabular}{|c|c|c|c|c|c|c|c|}
 \hline
 \multicolumn{8}{|c|}{\textbf{Tabla generada para el simulador de radares con 10 simulaciones}} \\ \hline
-\textbf{Num. repuestos} & \textbf{Num. simulaciones} & \textbf{Media fallos} & \textbf{Media t desproteccion} & \textbf{Media \% desproteccion} & \textbf{Desv. num fallos} & \textbf{Desv. t desproteccion} & \textbf{Desv \% desproteccion} \\ \hline
+\textbf{Num. repuestos} & \textbf{Num. simulaciones} & \textbf{Media fallos} & \textbf{Media t desprotección} & \textbf{Media \% desprotección} & \textbf{Desv. num fallos} & \textbf{Desv. t desprotección} & \textbf{Desv \% desprotección} \\ \hline
 0 & 10 & 44.7 & 349.833 & 95.8447 & 2.86937 & 11.2503 & 3.08207 \\
 1 & 10 & 51.1 & 327.844 & 89.8203 & 3.66516 & 12.1404 & 3.32656 \\
 2 & 10 & 57.9 & 300.196 & 82.2454 & 4.01246 & 21.3681 & 5.8542 \\
@@ -129,7 +129,7 @@ Para 5 simulaciones, podemos apreciar como el numero minimo de repuestos necesar
 }
 \end{table}
 
-Para 10 simulaciones, vemos que el numero minimo de repuestos es 12.
+Para 10 simulaciones, vemos que el número mínimo de repuestos es 12.
 
 % Please add the following required packages to your document preamble:
 % \usepackage{graphicx}
@@ -139,7 +139,7 @@ Para 10 simulaciones, vemos que el numero minimo de repuestos es 12.
 \begin{tabular}{|c|c|c|c|c|c|c|c|}
 \hline
 \multicolumn{8}{|c|}{\textbf{Tabla generada para el simulador de radares con 50 simulaciones}} \\ \hline
-\textbf{Num. repuestos} & \textbf{Num. simulaciones} & \textbf{Media fallos} & \textbf{Media t desproteccion} & \textbf{Media \% desproteccion} & \textbf{Desv. num fallos} & \textbf{Desv. t desproteccion} & \textbf{Desv \% desproteccion} \\ \hline
+\textbf{Num. repuestos} & \textbf{Num. simulaciones} & \textbf{Media fallos} & \textbf{Media t desprotección} & \textbf{Media \% desprotección} & \textbf{Desv. num fallos} & \textbf{Desv. t desprotección} & \textbf{Desv \% desprotección} \\ \hline
 0 & 50 & 43.96 & 353.582 & 96.8718 & 3.19413 & 7.18843 & 1.97028 \\
 1 & 50 & 50.1 & 327.789 & 89.8053 & 3.94994 & 15.8941 & 4.3548 \\
 2 & 50 & 53.82 & 287.653 & 78.809 & 5.75588 & 23.1274 & 6.33634 \\
@@ -172,7 +172,7 @@ Para 10 simulaciones, vemos que el numero minimo de repuestos es 12.
 
 \newpage
 
-Para 50 simulaciones el numero minimo vuelve a reducirse a 11.
+Para 50 simulaciones el número mínimo vuelve a reducirse a 11.
 
 % Please add the following required packages to your document preamble:
 % \usepackage{graphicx}
@@ -182,7 +182,7 @@ Para 50 simulaciones el numero minimo vuelve a reducirse a 11.
 \begin{tabular}{|c|c|c|c|c|c|c|c|}
 \hline
 \multicolumn{8}{|c|}{\textbf{Tabla generada para el simulador de radares con 100 simulaciones}} \\ \hline
-\textbf{Num. repuestos} & \textbf{Num. simulaciones} & \textbf{Media fallos} & \textbf{Media t desproteccion} & \textbf{Media \% desproteccion} & \textbf{Desv. num fallos} & \textbf{Desv. t desproteccion} & \textbf{Desv \% desproteccion} \\ \hline
+\textbf{Num. repuestos} & \textbf{Num. simulaciones} & \textbf{Media fallos} & \textbf{Media t desprotección} & \textbf{Media \% desprotección} & \textbf{Desv. num fallos} & \textbf{Desv. t desprotección} & \textbf{Desv \% desprotección} \\ \hline
 0 & 100 & 44.23 & 352.931 & 96.6935 & 2.90197 & 7.8096 & 2.13881 \\
 1 & 100 & 50.06 & 327.452 & 89.7128 & 4.05473 & 15.6902 & 4.29859 \\
 2 & 100 & 53.96 & 289.779 & 79.3916 & 4.97249 & 21.7551 & 5.96041 \\
@@ -213,7 +213,7 @@ Para 50 simulaciones el numero minimo vuelve a reducirse a 11.
 }
 \end{table}
 
-Para 100 simulaciones el numero minimo de repuestos necesarios es 12 nuevamente.
+Para 100 simulaciones el número mínimo de repuestos necesarios es 12 nuevamente.
 
 \newpage
 
@@ -225,7 +225,7 @@ Para 100 simulaciones el numero minimo de repuestos necesarios es 12 nuevamente.
 \begin{tabular}{|c|c|c|c|c|c|c|c|}
 \hline
 \multicolumn{8}{|c|}{\textbf{Tabla generada para el simulador de radares con 1 simulaciones}} \\ \hline
-\textbf{Num. repuestos} & \textbf{Num. simulaciones} & \textbf{Media fallos} & \textbf{Media t desproteccion} & \textbf{Media \% desproteccion} & \textbf{Desv. num fallos} & \textbf{Desv. t desproteccion} & \textbf{Desv \% desproteccion} \\ \hline
+\textbf{Num. repuestos} & \textbf{Num. simulaciones} & \textbf{Media fallos} & \textbf{Media t desprotección} & \textbf{Media \% desprotección} & \textbf{Desv. num fallos} & \textbf{Desv. t desprotección} & \textbf{Desv \% desprotección} \\ \hline
 0 & 500 & 43.614 & 353.264 & 96.7847 & 3.38172 & 8.2248 & 2.25325 \\
 1 & 500 & 49.964 & 327.702 & 89.7815 & 3.90708 & 15.6817 & 4.29633 \\
 2 & 500 & 52.968 & 286.273 & 78.4308 & 5.37818 & 22.7282 & 6.22769 \\
@@ -256,7 +256,7 @@ Para 100 simulaciones el numero minimo de repuestos necesarios es 12 nuevamente.
 }
 \end{table}
 
-Para 500 simulaciones, el numero se establece en 12.
+Para 500 simulaciones, el número se establece en 12.
 
 % Please add the following required packages to your document preamble:
 % \usepackage{graphicx}
@@ -266,7 +266,7 @@ Para 500 simulaciones, el numero se establece en 12.
 \begin{tabular}{|c|c|c|c|c|c|c|c|}
 \hline
 \multicolumn{8}{|c|}{\textbf{Tabla generada para el simulador de radares con 1 simulaciones}} \\ \hline
-\textbf{Num. repuestos} & \textbf{Num. simulaciones} & \textbf{Media fallos} & \textbf{Media t desproteccion} & \textbf{Media \% desproteccion} & \textbf{Desv. num fallos} & \textbf{Desv. t desproteccion} & \textbf{Desv \% desproteccion} \\ \hline
+\textbf{Num. repuestos} & \textbf{Num. simulaciones} & \textbf{Media fallos} & \textbf{Media t desprotección} & \textbf{Media \% desprotección} & \textbf{Desv. num fallos} & \textbf{Desv. t desprotección} & \textbf{Desv \% desprotección} \\ \hline
 0 & 1000 & 43.513 & 353.071 & 96.732 & 3.1796 & 8.59499 & 2.35043 \\
 1 & 1000 & 49.824 & 327.038 & 89.5994 & 3.96923 & 16.1883 & 4.43528 \\
 2 & 1000 & 53.512 & 288.475 & 79.0343 & 5.43427 & 22.5752 & 6.18537 \\
@@ -299,9 +299,9 @@ Para 500 simulaciones, el numero se establece en 12.
 
 Para 1000 simulaciones es finalmente 12.
 
-Por tanto, podemos afirmar rotundamente que para repuestos con un tiempo de reparación de entre 15 y 30 días y una vida util de 20 días, el numero minimo de repuestos necesarios para que el tiempo de desprotección parcial sea inferior al 1\% es de 12 repuestos.
+Por tanto, podemos afirmar rotundamente que para repuestos con un tiempo de reparación de entre 15 y 30 días y una vida útil de 20 días, el número mínimo de repuestos necesarios para que el tiempo de desprotección parcial sea inferior al 1\% es de 12 repuestos.
 
-Finalmente se añaden dos graficas en las que se puede notar, como al aumentar el numero de simulaciones, las curvas tanto para el tiempo de desprotección como para el porcentaje de tiempo, estas se suavizan.
+Finalmente se añaden dos gráficas en las que se puede notar, como al aumentar el número de simulaciones, las curvas tanto para el tiempo de desprotección como para el porcentaje de tiempo, estas se suavizan.
 
 \newpage
 
@@ -314,157 +314,20 @@ Finalmente se añaden dos graficas en las que se puede notar, como al aumentar e
 
 \newpage
 
-\section{Variacion de las  propiedades de los respuesto}
-A continuación, se ha realizado el mismo estudio, pero variando las propiedades de estos repuestos. De ahora en adelante 'tr' se referira a tiempo de reparación, es decir, el tiempo que tarda un repuesto en ser reparado y 'vu' se referira a la vida util del repuesto, el tiempo que tarda el mismo en fallar.
+\section{Variacion de las  propiedades de los repuesto}
+A continuación, se ha realizado el mismo estudio, pero variando las propiedades de estos repuestos. De ahora en adelante 'tr' se referirá a tiempo de reparación, es decir, el tiempo que tarda un repuesto en ser reparado y 'vu' se referirá a la vida útil del repuesto, el tiempo que tarda el mismo en fallar.
 
-% Please add the following required packages to your document preamble:
-% \usepackage{graphicx}
-\begin{table}[h]
-\centering
-\resizebox{\textwidth}{!}{%
-\begin{tabular}{|c|cccccc|}
-\hline
-\textbf{Numero de repuestos}                                                                    & 0           & 1           & 2           & 3           & 4           & 5           \\ \hline
-\textbf{Tiempo de fallo para tr de: 0-15 dias y vu de: 20 dias}        & 290.178.000 & 182.807.000 & 93.715.400  & 38.782.200  & 13.510.700  & 4.049.290   \\ \hline
-\textbf{Probabilidad de fallo para tr de: 0-15 dias y vu de: 20 dias}  & 79.500.900  & 50.084.000  & 25.675.500  & 10.625.300  & 3.701.570   & 1.109.400   \\ \hline
-\textbf{Tiempo de fallo para tr de: 0-15 dias y vu de: 40 dias}        & 208.320.000 & 81.507.000  & 23.034.500  & 5.914.470   & 1.078.910   & 158.565     \\ \hline
-\textbf{Probabilidad de fallo para tr de: 0-15 dias y vu de: 40 dias}  & 57.073.900  & 22.330.700  & 6.310.820   & 1.620.400   & 295.591     & 43.443      \\ \hline
-\textbf{Tiempo de fallo para tr de: 0-15 dias y vu de: 60 dias}        & 161.229.000 & 43.635.700  & 8.353.020   & 1.256.820   & 175.779     & 3.976       \\ \hline
-\textbf{Probabilidad de fallo para tr de: 0-15 dias y vu de: 60 dias}  & 44.172.200  & 11.955.000  & 2.288.500   & 344.333     & 48.159      & 1.089       \\ \hline
-\textbf{Tiempo de fallo para tr de: 15-30 dias y vu de: 20 dias}       & 352.807.000 & 328.292.000 & 290.227.000 & 239.578.000 & 187.811.000 & 134.982.000 \\ \hline
-\textbf{Probabilidad de fallo para tr de: 15-30 dias y vu de: 20 dias} & 96.659.600  & 89.943.100  & 79.514.300  & 65.637.800  & 51.455.200  & 36.981.500  \\ \hline
-\textbf{Tiempo de fallo para tr de: 15-30 dias y vu de: 40 dias}       & 319.690.000 & 246.296.000 & 163.667.000 & 95.644.000  & 45.735.100  & 18.638.900  \\ \hline
-\textbf{Probabilidad de fallo para tr de: 15-30 dias y vu de: 40 dias} & 87.586.400  & 67.478.300  & 44.840.300  & 26.203.800  & 12.530.200  & 5.106.560   \\ \hline
-\textbf{Tiempo de fallo para tr de: 15-30 dias y vu de: 60 dias}       & 285.777.000 & 179.152.000 & 92.001.000  & 39.119.900  & 13.525.000  & 3.638.090   \\ \hline
-\textbf{Probabilidad de fallo para tr de: 15-30 dias y vu de: 60 dias} & 78.295.200  & 49.082.800  & 25.205.800  & 10.717.800  & 3.705.490   & 996.736     \\ \hline
-\textbf{Tiempo de fallo para tr de: 30-45 dias y vu de: 20 dias}       & 359.503.000 & 349.740.000 & 334.531.000 & 315.070.000 & 284.060.000 & 253.686.000 \\ \hline
-\textbf{Probabilidad de fallo para tr de: 30-45 dias y vu de: 20 dias} & 98.494.100  & 95.819.300  & 91.652.200  & 86.320.500  & 77.824.700  & 69.503.100  \\ \hline
-\textbf{Tiempo de fallo para tr de: 30-45 dias y vu de: 40 dias}       & 344.213.000 & 307.471.000 & 253.475.000 & 197.899.000 & 140.146.000 & 89.738.500  \\ \hline
-\textbf{Probabilidad de fallo para tr de: 30-45 dias y vu de: 40 dias} & 94.304.900  & 84.238.500  & 69.445.300  & 54.218.800  & 38.396.200  & 24.585.900  \\ \hline
-\textbf{Tiempo de fallo para tr de: 30-45 dias y vu de: 60 dias}       & 325.092.000 & 258.958.000 & 179.642.000 & 110.295.000 & 59.604.000  & 28.266.200  \\ \hline
-\textbf{Probabilidad de fallo para tr de: 30-45 dias y vu de: 60 dias} & 89.066.200  & 70.947.300  & 49.217.000  & 30.217.900  & 16.329.900  & 7.744.160   \\ \hline
-\textbf{Tiempo de fallo para tr de: 45-60 dias y vu de: 20 dias}       & 360.435.000 & 354.797.000 & 345.664.000 & 333.814.000 & 318.194.000 & 300.118.000 \\ \hline
-\textbf{Probabilidad de fallo para tr de: 45-60 dias y vu de: 20 dias} & 98.749.200  & 97.204.600  & 94.702.500  & 91.455.700  & 87.176.400  & 82.224.000  \\ \hline
-\textbf{Tiempo de fallo para tr de: 45-60 dias y vu de: 40 dias}       & 352.794.000 & 330.471.000 & 297.761.000 & 260.107.000 & 211.817.000 & 163.849.000 \\ \hline
-\textbf{Probabilidad de fallo para tr de: 45-60 dias y vu de: 40 dias} & 96.655.900  & 90.540.100  & 81.578.400  & 71.262.000  & 58.032.000  & 44.890.200  \\ \hline
-\textbf{Tiempo de fallo para tr de: 45-60 dias y vu de: 60 dias}       & 340.635.000 & 297.168.000 & 239.028.000 & 178.139.000 & 121.407.000 & 75.020.700  \\ \hline
-\textbf{Probabilidad de fallo para tr de: 45-60 dias y vu de: 60 dias} & 93.324.800  & 81.415.900  & 65.487.200  & 48.805.200  & 33.262.100  & 20.553.600  \\ \hline
-\end{tabular}%
-}
-\end{table}
-
-% Please add the following required packages to your document preamble:
-% \usepackage{graphicx}
-\begin{table}[h]
-\centering
-\resizebox{\textwidth}{!}{%
-\begin{tabular}{|c|rrrrrr|}
-\hline
-\textbf{Numero de repuestos}                                                                    & 6           & 7           & 8           & 9           & 10          & 11          \\ \hline
-\textbf{Tiempo de fallo para tr de: 0-15 dias y vu de: 20 dias}        & 1.005.120   & 249.555     & 45.871      & 19.888      & 0           & 0           \\ \hline
-\textbf{Probabilidad de fallo para tr de: 0-15 dias y vu de: 20 dias}  & 275.375     & 68.371      & 12.568      & 5.449       & 0           & 0           \\ \hline
-\textbf{Tiempo de fallo para tr de: 0-15 dias y vu de: 40 dias}        & 24.688      & 2.795       & 0           & 0           & 0           & 0           \\ \hline
-\textbf{Probabilidad de fallo para tr de: 0-15 dias y vu de: 40 dias}  & 6.764       & 766         & 0           & 0           & 0           & 0           \\ \hline
-\textbf{Tiempo de fallo para tr de: 0-15 dias y vu de: 60 dias}        & 0           & 0           & 0           & 0           & 0           & 0           \\ \hline
-\textbf{Probabilidad de fallo para tr de: 0-15 dias y vu de: 60 dias}  & 0           & 0           & 0           & 0           & 0           & 0           \\ \hline
-\textbf{Tiempo de fallo para tr de: 15-30 dias y vu de: 20 dias}       & 90.080.900  & 53.889.000  & 32.841.800  & 16.865.000  & 8.189.470   & 4.165.960   \\ \hline
-\textbf{Probabilidad de fallo para tr de: 15-30 dias y vu de: 20 dias} & 24.679.700  & 14.764.100  & 8.997.740   & 4.620.540   & 2.243.690   & 1.141.360   \\ \hline
-\textbf{Tiempo de fallo para tr de: 15-30 dias y vu de: 40 dias}       & 7.656.350   & 2.453.380   & 639.037     & 163.727     & 26.880      & 22.261      \\ \hline
-\textbf{Probabilidad de fallo para tr de: 15-30 dias y vu de: 40 dias} & 2.097.630   & 672.159     & 175.079     & 44.857      & 7.364       & 6.099       \\ \hline
-\textbf{Tiempo de fallo para tr de: 15-30 dias y vu de: 60 dias}       & 920.252     & 157.418     & 54.122      & 25.680      & 0           & 0           \\ \hline
-\textbf{Probabilidad de fallo para tr de: 15-30 dias y vu de: 60 dias} & 252.124     & 43.128      & 14.828      & 7.036       & 0           & 0           \\ \hline
-\textbf{Tiempo de fallo para tr de: 30-45 dias y vu de: 20 dias}       & 217.996.000 & 180.724.000 & 142.472.000 & 109.242.000 & 83.119.500  & 55.209.100  \\ \hline
-\textbf{Probabilidad de fallo para tr de: 30-45 dias y vu de: 20 dias} & 59.724.900  & 49.513.400  & 39.033.400  & 29.929.200  & 22.772.500  & 15.125.800  \\ \hline
-\textbf{Tiempo de fallo para tr de: 30-45 dias y vu de: 40 dias}       & 50.780.100  & 30.012.000  & 13.875.000  & 6.757.860   & 2.919.280   & 1.282.470   \\ \hline
-\textbf{Probabilidad de fallo para tr de: 30-45 dias y vu de: 40 dias} & 13.912.300  & 8.222.460   & 3.801.370   & 1.851.470   & 799.804     & 351.362     \\ \hline
-\textbf{Tiempo de fallo para tr de: 30-45 dias y vu de: 60 dias}       & 10.675.300  & 4.970.000   & 1.488.900   & 454.684     & 199.948     & 55.803      \\ \hline
-\textbf{Probabilidad de fallo para tr de: 30-45 dias y vu de: 60 dias} & 2.924.730   & 1.361.640   & 407.918     & 124.571     & 54.780      & 15.289      \\ \hline
-\textbf{Tiempo de fallo para tr de: 45-60 dias y vu de: 20 dias}       & 277.158.000 & 258.981.000 & 226.636.000 & 203.981.000 & 176.055.000 & 145.095.000 \\ \hline
-\textbf{Probabilidad de fallo para tr de: 45-60 dias y vu de: 20 dias} & 75.933.700  & 70.953.800  & 62.092.000  & 55.885.200  & 48.234.200  & 39.752.100  \\ \hline
-\textbf{Tiempo de fallo para tr de: 45-60 dias y vu de: 40 dias}       & 120.366.000 & 84.927.100  & 52.957.500  & 31.982.900  & 17.919.500  & 8.770.750   \\ \hline
-\textbf{Probabilidad de fallo para tr de: 45-60 dias y vu de: 40 dias} & 32.976.900  & 23.267.700  & 14.508.900  & 8.762.430   & 4.909.460   & 2.402.950   \\ \hline
-\textbf{Tiempo de fallo para tr de: 45-60 dias y vu de: 60 dias}       & 41.344.600  & 20.730.800  & 10.407.600  & 4.258.740   & 1.351.070   & 447.316     \\ \hline
-\textbf{Probabilidad de fallo para tr de: 45-60 dias y vu de: 60 dias} & 11.327.300  & 5.679.680   & 2.851.390   & 1.166.780   & 370.157     & 122.552     \\ \hline
-\end{tabular}%
-}
-\end{table}
-
-% Please add the following required packages to your document preamble:
-% \usepackage{graphicx}
-\begin{table}[h]
-\centering
-\resizebox{\textwidth}{!}{%
-\begin{tabular}{|c|rrrrrr|}
-\hline
-\textbf{Numero de repuestos}                                                                    & 12          & 13         & 14         & 15         & 16         & 17         \\ \hline
-\textbf{Tiempo de fallo para tr de: 0-15 dias y vu de: 20 dias}        & 0           & 0          & 0          & 0          & 0          & 0          \\ \hline
-\textbf{Probabilidad de fallo para tr de: 0-15 dias y vu de: 20 dias}  & 0           & 0          & 0          & 0          & 0          & 0          \\ \hline
-\textbf{Tiempo de fallo para tr de: 0-15 dias y vu de: 40 dias}        & 0           & 0          & 0          & 0          & 0          & 0          \\ \hline
-\textbf{Probabilidad de fallo para tr de: 0-15 dias y vu de: 40 dias}  & 0           & 0          & 0          & 0          & 0          & 0          \\ \hline
-\textbf{Tiempo de fallo para tr de: 0-15 dias y vu de: 60 dias}        & 0           & 0          & 0          & 0          & 0          & 0          \\ \hline
-\textbf{Probabilidad de fallo para tr de: 0-15 dias y vu de: 60 dias}  & 0           & 0          & 0          & 0          & 0          & 0          \\ \hline
-\textbf{Tiempo de fallo para tr de: 15-30 dias y vu de: 20 dias}       & 1.455.760   & 549.235    & 216.799    & 95.298     & 369        & 0          \\ \hline
-\textbf{Probabilidad de fallo para tr de: 15-30 dias y vu de: 20 dias} & 398.839     & 150.475    & 59.397     & 26.109     & 101        & 0          \\ \hline
-\textbf{Tiempo de fallo para tr de: 15-30 dias y vu de: 40 dias}       & 0           & 0          & 0          & 0          & 0          & 0          \\ \hline
-\textbf{Probabilidad de fallo para tr de: 15-30 dias y vu de: 40 dias} & 0           & 0          & 0          & 0          & 0          & 0          \\ \hline
-\textbf{Tiempo de fallo para tr de: 15-30 dias y vu de: 60 dias}       & 0           & 0          & 0          & 0          & 0          & 0          \\ \hline
-\textbf{Probabilidad de fallo para tr de: 15-30 dias y vu de: 60 dias} & 0           & 0          & 0          & 0          & 0          & 0          \\ \hline
-\textbf{Tiempo de fallo para tr de: 30-45 dias y vu de: 20 dias}       & 36.429.400  & 23.156.800 & 13.527.900 & 7.851.340  & 3.954.700  & 2.390.920  \\ \hline
-\textbf{Probabilidad de fallo para tr de: 30-45 dias y vu de: 20 dias} & 9.980.670   & 6.344.330  & 3.706.270  & 2.151.050  & 1.083.480  & 655.048    \\ \hline
-\textbf{Tiempo de fallo para tr de: 30-45 dias y vu de: 40 dias}       & 347.766     & 96.723     & 31.339     & 9.353      & 11.523     & 3.702      \\ \hline
-\textbf{Probabilidad de fallo para tr de: 30-45 dias y vu de: 40 dias} & 95.279      & 26.499     & 8.586      & 2.563      & 3.157      & 1.014      \\ \hline
-\textbf{Tiempo de fallo para tr de: 30-45 dias y vu de: 60 dias}       & 10.315      & 0          & 0          & 0          & 0          & 0          \\ \hline
-\textbf{Probabilidad de fallo para tr de: 30-45 dias y vu de: 60 dias} & 2.826       & 0          & 0          & 0          & 0          & 0          \\ \hline
-\textbf{Tiempo de fallo para tr de: 45-60 dias y vu de: 20 dias}       & 120.032.000 & 93.612.700 & 73.717.200 & 52.880.300 & 35.639.100 & 25.849.900 \\ \hline
-\textbf{Probabilidad de fallo para tr de: 45-60 dias y vu de: 20 dias} & 32.885.400  & 25.647.300 & 20.196.500 & 14.487.700 & 9.764.120  & 7.082.160  \\ \hline
-\textbf{Tiempo de fallo para tr de: 45-60 dias y vu de: 40 dias}       & 4.577.220   & 1.839.950  & 901.993    & 258.516    & 71.180     & 69.624     \\ \hline
-\textbf{Probabilidad de fallo para tr de: 45-60 dias y vu de: 40 dias} & 1.254.030   & 504.097    & 247.121    & 70.826     & 19.501     & 19.075     \\ \hline
-\textbf{Tiempo de fallo para tr de: 45-60 dias y vu de: 60 dias}       & 109.780     & 75.383     & 3.011      & 0          & 0          & 0          \\ \hline
-\textbf{Probabilidad de fallo para tr de: 45-60 dias y vu de: 60 dias} & 30.077      & 20.653     & 825        & 0          & 0          & 0          \\ \hline
-\end{tabular}%
-}
-\end{table}
-
-% Please add the following required packages to your document preamble:
-% \usepackage{graphicx}
-\begin{table}[h]
-\centering
-\resizebox{\textwidth}{!}{%
-\begin{tabular}{|c|rrrrrrrr|}
-\hline
-\textbf{Numero de repuestos}                                                                    & 18         & 19        & 20        & 21        & 22        & 23        & 24      & 25      \\ \hline
-\textbf{Tiempo de fallo para tr de: 0-15 dias y vu de: 20 dias}        & 0          & 0         & 0         & 0         & 0         & 0         & 0       & 0       \\ \hline
-\textbf{Probabilidad de fallo para tr de: 0-15 dias y vu de: 20 dias}  & 0          & 0         & 0         & 0         & 0         & 0         & 0       & 0       \\ \hline
-\textbf{Tiempo de fallo para tr de: 0-15 dias y vu de: 40 dias}        & 0          & 0         & 0         & 0         & 0         & 0         & 0       & 0       \\ \hline
-\textbf{Probabilidad de fallo para tr de: 0-15 dias y vu de: 40 dias}  & 0          & 0         & 0         & 0         & 0         & 0         & 0       & 0       \\ \hline
-\textbf{Tiempo de fallo para tr de: 0-15 dias y vu de: 60 dias}        & 0          & 0         & 0         & 0         & 0         & 0         & 0       & 0       \\ \hline
-\textbf{Probabilidad de fallo para tr de: 0-15 dias y vu de: 60 dias}  & 0          & 0         & 0         & 0         & 0         & 0         & 0       & 0       \\ \hline
-\textbf{Tiempo de fallo para tr de: 15-30 dias y vu de: 20 dias}       & 0          & 0         & 0         & 0         & 0         & 0         & 0       & 0       \\ \hline
-\textbf{Probabilidad de fallo para tr de: 15-30 dias y vu de: 20 dias} & 0          & 0         & 0         & 0         & 0         & 0         & 0       & 0       \\ \hline
-\textbf{Tiempo de fallo para tr de: 15-30 dias y vu de: 40 dias}       & 0          & 0         & 0         & 0         & 0         & 0         & 0       & 0       \\ \hline
-\textbf{Probabilidad de fallo para tr de: 15-30 dias y vu de: 40 dias} & 0          & 0         & 0         & 0         & 0         & 0         & 0       & 0       \\ \hline
-\textbf{Tiempo de fallo para tr de: 15-30 dias y vu de: 60 dias}       & 0          & 0         & 0         & 0         & 0         & 0         & 0       & 0       \\ \hline
-\textbf{Probabilidad de fallo para tr de: 15-30 dias y vu de: 60 dias} & 0          & 0         & 0         & 0         & 0         & 0         & 0       & 0       \\ \hline
-\textbf{Tiempo de fallo para tr de: 30-45 dias y vu de: 20 dias}       & 931.753    & 332.306   & 223.525   & 59.286    & 27.318    & 7.663     & 17.718  & 0       \\ \hline
-\textbf{Probabilidad de fallo para tr de: 30-45 dias y vu de: 20 dias} & 255.275    & 91.043    & 61.240    & 16.243    & 7.484     & 2.099     & 4.854   & 0       \\ \hline
-\textbf{Tiempo de fallo para tr de: 30-45 dias y vu de: 40 dias}       & 0          & 0         & 0         & 0         & 0         & 0         & 0       & 0       \\ \hline
-\textbf{Probabilidad de fallo para tr de: 30-45 dias y vu de: 40 dias} & 0          & 0         & 0         & 0         & 0         & 0         & 0       & 0       \\ \hline
-\textbf{Tiempo de fallo para tr de: 30-45 dias y vu de: 60 dias}       & 0          & 0         & 0         & 0         & 0         & 0         & 0       & 0       \\ \hline
-\textbf{Probabilidad de fallo para tr de: 30-45 dias y vu de: 60 dias} & 0          & 0         & 0         & 0         & 0         & 0         & 0       & 0       \\ \hline
-\textbf{Tiempo de fallo para tr de: 45-60 dias y vu de: 20 dias}       & 17.073.700 & 9.954.620 & 6.509.450 & 4.511.070 & 2.610.570 & 1.358.350 & 476.146 & 261.388 \\ \hline
-\textbf{Probabilidad de fallo para tr de: 45-60 dias y vu de: 20 dias} & 4.677.720  & 2.727.290 & 1.783.410 & 1.235.910 & 715.225   & 372.151   & 130.451 & 71.613  \\ \hline
-\textbf{Tiempo de fallo para tr de: 45-60 dias y vu de: 40 dias}       & 49.402     & 467       & 0         & 0         & 0         & 0         & 0       & 0       \\ \hline
-\textbf{Probabilidad de fallo para tr de: 45-60 dias y vu de: 40 dias} & 13.535     & 128       & 0         & 0         & 0         & 0         & 0       & 0       \\ \hline
-\textbf{Tiempo de fallo para tr de: 45-60 dias y vu de: 60 dias}       & 0          & 0         & 0         & 0         & 0         & 0         & 0       & 0       \\ \hline
-\textbf{Probabilidad de fallo para tr de: 45-60 dias y vu de: 60 dias} & 0          & 0         & 0         & 0         & 0         & 0         & 0       & 0       \\ \hline
-\end{tabular}%
-}
-\end{table}
-
+Debido al elevado número de pruebas realizadas, comentaremos los resultados en función de las siguientes gráficas:
 
 \begin{figure}[h]
 \includegraphics[width=16cm]{radares_prob_multiple.png}
 \includegraphics[width=16cm]{radares_tiempo_multiple.png}
 \centering
 \end{figure}
+En primer lugar, me gustaría recalcar un hecho que no debería sorprender a nadie, los mejores resultados los aporta el repuesto cuyo tr es menor, mientras que su vu es la máxima. Esto tiene mucho sentido, puesto que el mejor componente es el casi no falla y además es repuesto lo más rápido posible. Tampoco debería sorprendernos, que la peor combinación de parámetros es la opuesta, en la que el tr del repuesto es máxima y la vu es mínima.
 
+Para obtener el mismo grado de protección, para el mejor repuesto solo necesitamos 3 mientras que para el peor necesitamos más de 20.
+
+Creo que en este problema hace falta un factor decisivo a la hora de considerar uno u otro. Este factor es sin duda el precio del repuesto. Si no conocemos el precio, obviamente siempre sera mejor el repuesto que mejores características tenga.
+
+Por tanto la influencia que tiene variar estos parámetros en el sistema es clara, cuanto mejor sea el repuesto, mejor resultado en cuanto a protección aporta.
