--- a/practica1/memoria/input/peces.tex
+++ b/practica1/memoria/input/peces.tex
@@ -18,7 +18,7 @@ Sin embargo, en los sistemas en equilibrio, vemos como la población de peces gr
 \newpage
 \newpage
 
-\begin{figure}[h]
+\begin{figure}[h!]
 \includegraphics[width=16cm]{lago_5000_10.png}
 \includegraphics[width=16cm]{lago_5000_50.png}
 \centering
@@ -26,7 +26,7 @@ Sin embargo, en los sistemas en equilibrio, vemos como la población de peces gr
 
 \newpage
 
-\begin{figure}[h]
+\begin{figure}[h!]
 \includegraphics[width=16cm]{lago_50000_100.png}
 \includegraphics[width=16cm]{lago_50000_500.png}
 \centering
@@ -36,12 +36,12 @@ Sin embargo, en los sistemas en equilibrio, vemos como la población de peces gr
 
 \section{Campaña de pesca}
 
-Para este apartado se ha propuesto añadir una mécanica de pesca al sistema. Para ello se ha seleccionado un sistema que se sabe que se encuentra en equilibrio.
+Para este apartado se ha propuesto añadir una mecánica de pesca al sistema. Para ello se ha seleccionado un sistema que se sabe que se encuentra en equilibrio.
 
 El sistema con una población de 50000 peces pequeños y 100 grandes es el sistema de referencia.
 
 
-La mecánica de pesca funciona de la siguiente manera, cada cierto numero de días, se sustrae un determinado \% porcentaje de la población de peces grandes --- que es la que tiene interés comercial ---.
+La mecánica de pesca funciona de la siguiente manera, cada cierto número de días, se sustrae un determinado \% porcentaje de la población de peces grandes --- que es la que tiene interés comercial ---.
 
 Finalmente se anota el total de la pesca pasados 10 años en la simulación para comprobar cual es el mejor sistema.
 
@@ -74,11 +74,11 @@ En la siguiente tabla podemos observar los resultados obtenidos:
 }
 \end{table}
 
-Como se puede apreciar, la mejor opción es pescar el 30\% de la población de los peces grandes cada mes. De esta manera, el numero de peces pequeños se mantiene lo suficientemente estable para que el sistema permanezca el equilibrio y la población de peces grandes pueda recuperarse.
+Como se puede apreciar, la mejor opción es pescar el 30\% de la población de los peces grandes cada mes. De esta manera, el número de peces pequeños se mantiene lo suficientemente estable para que el sistema permanezca el equilibrio y la población de peces grandes pueda recuperarse.
 
 Más adelante podemos ver como afecta gráficamente la pesca al ecosistema.
 
-\begin{figure}[h]
+\begin{figure}[h!]
 \includegraphics[width=16cm]{pesca_30_0.3.png}
 \includegraphics[width=16cm]{pesca_30_0.9.png}
 \centering
