--- a/practica1/memoria/input/radares.tex
+++ b/practica1/memoria/input/radares.tex
@@ -172,7 +172,7 @@ Para 10 simulaciones, vemos que el número mínimo de repuestos es 12.
 
 \newpage
 
-Para 50 simulaciones el número mínimo vuelve a reducirse a 11.
+Para 50 simulaciones el número mínimo se reduce a 11.
 
 % Please add the following required packages to your document preamble:
 % \usepackage{graphicx}
@@ -314,7 +314,7 @@ Finalmente se añaden dos gráficas en las que se puede notar, como al aumentar 
 
 \newpage
 
-\section{Variacion de las  propiedades de los repuesto}
+\section{Variación de las  propiedades de los repuesto}
 A continuación, se ha realizado el mismo estudio, pero variando las propiedades de estos repuestos. De ahora en adelante 'tr' se referirá a tiempo de reparación, es decir, el tiempo que tarda un repuesto en ser reparado y 'vu' se referirá a la vida útil del repuesto, el tiempo que tarda el mismo en fallar.
 
 Debido al elevado número de pruebas realizadas, comentaremos los resultados en función de las siguientes gráficas:
@@ -328,6 +328,6 @@ En primer lugar, me gustaría recalcar un hecho que no debería sorprender a nad
 
 Para obtener el mismo grado de protección, para el mejor repuesto solo necesitamos 3 mientras que para el peor necesitamos más de 20.
 
-Creo que en este problema hace falta un factor decisivo a la hora de considerar uno u otro. Este factor es sin duda el precio del repuesto. Si no conocemos el precio, obviamente siempre sera mejor el repuesto que mejores características tenga.
+Creo que en este problema hace falta un factor decisivo a la hora de considerar uno u otro. Este factor es sin duda el precio del repuesto. Si no conocemos el precio, obviamente siempre será mejor el repuesto que mejores características tenga.
 
 Por tanto la influencia que tiene variar estos parámetros en el sistema es clara, cuanto mejor sea el repuesto, mejor resultado en cuanto a protección aporta.
