Script de entrega

--- a/practica2/memoria/demo.tex
+++ b/practica2/memoria/demo.tex
@@ -12,6 +12,7 @@
 	\graphicspath{{img/}}
 \usepackage{multirow}
 \usepackage{longtable}
+\usepackage{minted}
 
 \author{Alejandro Manzanares Lemus}
 \title{Práctica 2}
